force-app/main/default/objects/Sponsorable_Attribute__c/Sponsorable_Attribute__c.object-meta.xml
<CustomObject>
    <label>Sponsorable Attribute</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sponsorable Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorable Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>