force-app/main/default/objects/Sponsorable_Attribute__c/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <label>Attribute Type</label>
    <referenceTo>Sponsorable_Attribute_Definition__c</referenceTo>
    <relationshipLabel>Sponsorable Attributes</relationshipLabel>
    <relationshipName>Sponsorable_Attributes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>