force-app/main/default/objects/Sponsorable_Attribute__c/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>