force-app/main/default/objects/Sponsorable_Attribute__c/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>