force-app/main/default/objects/Sponsorable_Attribute__c/fields/Sponsorable__c.field-meta.xml
<CustomField>
    <fullName>Sponsorable__c</fullName>
    <label>Sponsorable</label>
    <referenceTo>Sponsorable__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Sponsorable_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>